--- a/analysis/gdp_prediction_analysis_shortened_data.Rmd
+++ b/analysis/gdp_prediction_analysis_shortened_data.Rmd
@@ -452,7 +452,7 @@ model$plot_hyperparam_results()
 
 The best hyperparemeters are shown below
 
-```{r}
+```{r, echo=FALSE}
 model$summarize_best_hyperparams() %>%
   kable() %>%
   kable_styling(bootstrap_options = "striped", full_width = F)
